--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,8 @@
 .site-layout .site-layout-background {
   background: #fff;
 }
+
+.site-page-header-ghost-wrapper {
+  background-color: #f5f5f6;
+  margin-top: 1px;
+}
